test/types/type_variables/deitz/part7/test_infer_class2.good
Error: Unresolved call 'C(f=1)' (test_infer_class2.chpl:6)
Candidates are:
  C(type t, f: t) (test_infer_class2.chpl:1)
